[package]
name = "cocoabeans-generators"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# feature: preserve_order is REQUIRED for this to work without rewriting a bunch of this
serde_json = { version = "1.0.81", features = ["preserve_order"] }
lazy_static = "1.4.0"
